REW-7 데이터 구조 리팩토링 PR 수정